se modifico 2davez el titulo

--- a/formular.html
+++ b/formular.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-	<title>Registro </title>
+	<title>Registro de Personas</title>
 	</head>
 	<body>
 	<h3>Ingrese los siguientes datos:</h3>
